--- a/css/estilos.css
+++ b/css/estilos.css
@@ -14,6 +14,14 @@ div span p {
  	width: 30%;
  	margin: 50px 350px;
  	padding: 30px;
- 	/*border: 20px PREGUNTAR*/}
+ 	text-align: center;
+ /*border: 20px PREGUNTAR*/}
 
- 
+ .labia {
+ 	background: #fff; 
+ }
+
+ #servicios {}
+.gdc 
+{ color: red;
+ }
